# bitmap

./: CMakeLists.txt  CMakeSettings.json
bmp_program/: CMakeLists.txt  bitmap.c  bitmap.h  main.c  main.h
